--- a/_includes/swc/setup.html
+++ b/_includes/swc/setup.html
@@ -345,7 +345,7 @@
   {% endcomment %}
 </div> {% comment %} End of 'Python' section. {% endcomment %}
 
-<div id="r"> {% comment %} Start of 'R' section. {% endcomment %}
+<!-- <div id="r"> {% comment %} Start of 'R' section. {% endcomment %}
   <h3>R</h3>
 
   <p>
@@ -399,9 +399,9 @@
       </article>
     </div>
   </div>
-</div> {% comment %} End of 'R' section. {% endcomment %}
+</div> --> {% comment %} End of 'R' section. {% endcomment %}
 
-<div id="sql"> {% comment %} Start of 'SQLite' section. {% endcomment %}
+<!-- <div id="sql"> {% comment %} Start of 'SQLite' section. {% endcomment %}
   <h3>SQLite</h3>
 
   <p>
@@ -457,9 +457,9 @@
   <p><strong>If you installed Anaconda, it also has a copy of SQLite
       <a href="https://github.com/ContinuumIO/anaconda-issues/issues/307">without support to <code>readline</code></a>.
       Instructors will provide a workaround for it if needed.</strong></p>
-</div> {% comment %} End of 'SQLite' section. {% endcomment %}
+</div> --> {% comment %} End of 'SQLite' section. {% endcomment %}
 
-<div id="openrefine"> {% comment %} Start of 'OpenRefine' section. {% endcomment %}
+<!-- <div id="openrefine"> {% comment %} Start of 'OpenRefine' section. {% endcomment %}
   <h3>OpenRefine</h3>
   <p>
     For this lesson you will need <em>OpenRefine</em> and a
@@ -509,10 +509,10 @@
       </article>
     </div>
   </div>
-</div> {% comment %} End of 'OpenRefine' section. {% endcomment %}
+</div> --> {% comment %} End of 'OpenRefine' section. {% endcomment %}
 
 {% comment %}
-<div id="vm">
+<!-- <div id="vm">
   <h3>Virtual Machine</h3>
 
   <p>
@@ -534,5 +534,5 @@
       loading the <code>.ova</code> file.
     </li>
   </ol>
-</div>
+</div> -->
 {% endcomment %}
